# securefs-full-source

./: CMakeLists.txt  main.cpp
sources/: apple_xattr_workaround.cpp  btree_dir.cpp  btree_dir.h  commands.cpp  commands.h  common_platform.cpp  constants.h  crypto.cpp  crypto.h  exceptions.cpp  exceptions.h  file_table.cpp  file_table.h  files.cpp  files.h  fuse_tracer.cpp  fuse_tracer.h  lite_fs.cpp  lite_fs.h  lite_operations.cpp  lite_stream.cpp  lite_stream.h  lock_enabled.cpp  lock_guard.h  logger.cpp  logger.h  mystring.cpp  mystring.h  myutils.cpp  myutils.h  operations.cpp  operations.h  platform.h  streams.cpp  streams.h  unix.cpp  win.cpp  win_get_proc.h
test/: main.cpp  simple_test.py  test_common.h  test_crypto.cpp  test_streams.cpp
test/reference/: chpass_all.py
